# AutoForge

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  alembic.ini  autoforge_project_plan.md  docker-compose.observability.yml  docker-compose.yml  pyproject.toml
agents/: __init__.py
agents/base/: __init__.py  base_agent.py
agents/research/: __init__.py  conflict_detector.py  crawl_engine.py  research_agent.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
api/: logging_conf.py  main.py
api/middleware/: auth.py
api/routers/: __init__.py  github.py  knowledge.py  manifests.py  projects.py
config/: STANDARDS_CHANGELOG.md  employer_profile.json
db/: base.py  models.py
knowledge/: manifesto.md
knowledge/profile/: professional_bio.md
orchestration/: github_manager.py  manifest_merger.py  project_registry.py  scheduler.py  tasks.py
schemas/: decision_record.py  employer_profile.py  knowledge_resource.py  project_intake.py  project_manifest.py
scripts/: generate_env.sh
templates/claude/: settings.json
templates/github/workflows/: agent_trigger.yml  ci.yml  drift_monitor.yml  qa_trigger.yml
tests/: __init__.py  test_api_github.py  test_api_knowledge.py  test_base_agent.py  test_conflict_detector.py  test_crawl_engine.py  test_db_models.py  test_github_manager.py  test_manifest_merger.py  test_project_registry.py  test_schemas.py
